--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -1,33 +1,44 @@
 name: Update Weather API
+
 on:
   schedule:
-    - cron: "*/15 * * * *"  # Every 15 minutes
-  workflow_dispatch:        # Allow manual runs
+    # Run every 15 minutes
+    - cron: '*/15 * * * *'
+  workflow_dispatch:  # Allows manual triggering from GitHub UI
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install requests
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-      - name: Run fetch_weather script
+      - name: Run fetch_weather.py to update radar and models
         run: python scripts/fetch_weather.py
         env:
           AERIS_ID: ${{ secrets.AERIS_ID }}
           AERIS_SECRET: ${{ secrets.AERIS_SECRET }}
 
-      - name: Commit and push changes
+      - name: Run tropical.py to update tropical cyclone summary
+        run: python scripts/tropical.py
+        env:
+          API_TWC: ${{ secrets.API_TWC }}
+
+      - name: Commit and push changes if any
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update API files"
-          git push
+          git add api/
+          git diff --cached --quiet || git commit -m "Update API data"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
